# unimodel

./: Cargo.toml  README-zh.md  README.md
config/: default.yaml
docker/: Dockerfile  docker-compose.yml
docker/k8s/: deployment.yaml  hpa.yaml  rbac.yaml
docs/: architecture.md
scripts/: build.sh  deploy.sh
src/: lib.rs  main.rs
src/api/rest/handlers/: mod.rs  model_handler.rs  predict_handler.rs
src/application/services/: model_service.rs  prediction_service.rs
src/common/: constants.rs  enums.rs  error.rs  types.rs
src/domain/model/: mod.rs  model_entity.rs
src/domain/service/: batch_processor.rs  model_manager.rs
src/infrastructure/configuration/: mod.rs
src/tests/: integration_tests.rs
src/tests/benches/: performance_bench.rs
src/tests/unit/: utils_test.rs
